Prevent nav from overflowing

--- a/app/design/frontend/Travers/default/styles/blocks/_navigation.scss
+++ b/app/design/frontend/Travers/default/styles/blocks/_navigation.scss
@@ -320,7 +320,7 @@ $nav-section-title__height: 60px;
         font-size: 16px;
 
         &.category-item .submenu {
-            width: 100vw;
+            width: 100%;
             left: 0 !important; // overrides the nav JS
             box-shadow: 0 12px 25px -2px $c-dusty-grey;
         }
